--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+		<link rel="stylesheet" href="https://notedcode.com/static/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+
 		<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
 		<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+		<script type="text/javascript" src="https://notedcode.com/static/fancybox/jquery.fancybox.pack.js"></script>
 		
     	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
     	<link href='//fonts.googleapis.com/css?family=Source+Code+Pro:500' rel='stylesheet' type='text/css'>
@@ -100,6 +103,15 @@
 				font-size: 24px;
 				line-height: 30px;
 			}
+			p.caption {
+				padding-top: 20px;
+				margin-bottom: 40px;
+				font-size: 20px;
+			}
+			p.highlight {
+				padding: 20px;
+				font-weight: bold;
+			}
 			p {
 				font-size: 18px;
 				line-height: 24px;
@@ -119,6 +131,9 @@
 			.video, .thermometer, .order, .social, .statistics {
 				text-align: center;
 			}
+			.statistics {
+				margin-top: 40px;
+			}
 			.statistics h3, .statistics p {
 				color: #333;
 			}
@@ -133,6 +148,7 @@
 			}
 			.copy li {
 				line-height: 30px;
+				margin-top: 20px;
 			}
 			.asset {
 				padding: 2.5% 0%;
@@ -265,6 +281,21 @@
 				transform: rotate(45deg);
 			}
 
+			p.angled {
+				font-weight: bold;
+				font-size: 44px;
+				text-align: center;
+				margin-top: 40px;
+				line-height: 60px;
+
+				/* Rotate -30 degrees */
+				-webkit-transform: rotate(-30deg);
+				-moz-transform: rotate(-30deg);
+				-o-transform: rotate(-30deg);
+				transform: rotate(-30deg);
+
+			}
+
 			.contact {
 				margin-top: 20px;
 			}
@@ -289,6 +320,12 @@
 				border: 4px solid #ccc;
 			}
 
+			.trophy {
+				position: relative;
+				top: 3px;
+				right: 4px;
+			}
+
 		</style>
 
 		<script type="text/javascript">
@@ -308,12 +345,29 @@
 					placement: 'right',
 					trigger: 'hover'
 				});
-				
+
+				$.ajax({
+					type: 'GET',
+					url: 'https://notedcode.com/api/usercount/',
+					dataType: 'jsonp',
+					jsonpCallback: 'countback',
+					success: function(data) {
+						var count = data['count'];
+						$('#usercount').html(count);
+
+						var percent = count / 10;
+						$('#countbar').width(percent + '%');
+					}
+				});
+
+				$('a.screenshot').fancybox({
+					'hideOnContentClick': true
+				});
 			});
 		</script>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 	</head>
-	<body>
+	<body data-spy="scroll" data-target=".navbar">
 		<div id="ribbon" class="github-fork-ribbon-wrapper right" style="pointer-events: none;">
     		<div class="github-fork-ribbon">
         		<a href="https://class.coursera.org/startup-001/class/index" style="pointer-events: all;">Made for the Coursera<br/><span class="smalltext">Stanford Startup Engineering Course</span></a>
@@ -333,7 +387,7 @@
 					<a class="brand" href="/">Noted Code Bitstarter</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li class="active"><a href="/">Home</a></li>
+							<li class="active"><a href="#overview">Home</a></li>
 							<li><a href="#about">About</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
@@ -346,7 +400,7 @@
 			<div class="container repo">
 				<div class="row-fluid">
 					<div class="span6 offset3 center">
-						<h1><img id="main-logo" src="//notedcode.com/static/img/icon128.png" height="64" width="64">&nbsp;Noted Code</h1>
+						<h1><img id="main-logo" src="https://notedcode.com/static/img/icon128.png" height="64" width="64">&nbsp;Noted Code</h1>
 						<p class="lead info">Noted Code lets you create, share and read high-quality notes on source code.</p>
 						<p class="center"><a href="https://notedcode.com" class="btn btn-large btn-primary">Try it now!</a></p>
 					</div>
@@ -363,50 +417,52 @@
 				</div>
 				<div class="span6 center">
 					<p class="lead">Unlike many other "Bitstarters", Noted Code is not asking for your hard-earned bitcoins, just a Tweet.</p>
-					<p class="lead">But what I'm building is going to be <em>very</em> useful for you during the course. You can use Noted Code now to help understand code better.</p>
+					<p class="highlight well">Use Noted Code to learn from the code that you read and study, by sharing notes with others.</p>
 				</div>
 				<div class="span3 center">
-					<p class="lead"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://notedcode.com" data-text="I'm trying something to make understanding code better." data-via="NotedCode" data-size="large">Tweet</a></p>
+					<p class="lead"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://notedcode.com" data-text="Noted Code makes understanding code easier." data-via="NotedCode" data-size="large">Tweet</a></p>
 				</div>
 			</div>
 		</div>
 
 		<div class="container section">
 			<div class="row-fluid center">
-				<img class="post-header-image-contain" src="https://d233eq3e3p3cv0.cloudfront.net/max/700/0*lRoU_muLNK3H4C1a.png" alt="" width="700" height="261">
+				<img class="post-header-image-contain" src="https://notedcode.com/static/img/screenshots/leader.png" alt="" width="700" height="261">
+			</div>
+		</div>
+
+		<div class="container" id="about">
+			<div class="row-fluid intro">
+				<div class="span12 center">
+					<h2>Noted Code lets you&hellip;</h2>
+				</div>
+			</div>
+			<div class="row-fluid separated">
+				<div class="span4 center">
+					<a class="screenshot" rel="ssgroup" href="https://notedcode.com/static/img/screenshots/ss1.png"><img src="https://notedcode.com/static/img/screenshots/ss1_thumb.png" width="320" height="237" class="img-polaroid"></a>
+					<p class="caption">View code in a <em>clear format</em>, with comments placed alongside.</p>
+				</div>
+				<div class="span4 center">
+					<a class="screenshot" rel="ssgroup" href="https://notedcode.com/static/img/screenshots/ss2.png"><img src="https://notedcode.com/static/img/screenshots/ss2_thumb.png" width="320" height="237" class="img-polaroid"></a>
+					<p class="caption"><em>Add your own comments</em> in the form of notes alongside the code.</p>
+				</div>
+				<div class="span4 center">
+					<a class="screenshot" rel="ssgroup" href="https://notedcode.com/static/img/screenshots/ss3.png"><img src="https://notedcode.com/static/img/screenshots/ss3_thumb.png" width="320" height="237" class="img-polaroid"></a>
+					<p class="caption">View notes <em>from other people</em>, not just the original developer.</p>
+				</div>
 			</div>
 		</div>
 
 		<div class="container">
-			<div class="row-fluid intro">
-				<div class="span6 offset3 center">
-					<p class="lead">Use it to help learn from the code that you read and study, by sharing notes with others.</p>
-					<p class="lead">Search for any GitHub repository, browse any GitHub or Bitbucket repository, and keep track of all the notes that you make against code in them.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="container section" id="about">
 			<div class="row-fluid section1">
-				<div class="span5 offset1 copy">
-					<p>
-						Noted Code does three things very well:
-						<ol>
-							<li>It makes the code in any GitHub or Bitbucket repository <em>much easier to read</em>, by extracting all code comments and presenting them in a structured manner alongside the code.</li>
-							<li>It lets you <em>add your own comments</em> in the form of notes alongside the code. Those comments stay in the right place with the code as it changes.</li>
-							<li>It shows you notes <em>from other people</em>, not just the original developer.</li>
-						</ol>
-					</p>
-				</div>
-
-				<div class="span5 actions">
+				<div class="span6 offset3 actions">
 					<div class="row-fluid">
-						<div class="span8 offset2">
+						<div class="span12">
 							<div class="statistics">
-								<div class="span8 offset2">
-									<div class="linediv-l">
-										<h3>27</h3> <p>Early Adopters</p>
-									</div>
+								<div class="linediv-l">
+									<p>Noted Code has</p>
+									<h3><span id="usercount">?</span> early adopters</h3>
+									<p>Help me reach 1,000 before September 8</p>
 								</div>
 							</div>
 						</div>
@@ -415,29 +471,25 @@
 					<div class="row-fluid">
 						<div class="span10 offset1">
 							<div class="thermometer progress active">
-								<div class="bar bar-success" style="width: 6%;"></div>
+								<span id="countbar" class="bar bar-success" style="width: 6%;"></span>
+								<i class="icon-trophy pull-right trophy"></i>
 							</div>
 						</div>
 					</div>
-
-					<div class="row-fluid">
+						
+					<div class="row-fluid separated">
 						<div class="span8 offset2 social">
 							<a href="https://notedcode.com" class="btn btn-large btn-primary">Try it now!</a>
 						</div>
 					</div>
 				</div>
 			</div>
-		
-			<div class="row-fluid pitch">
-							</div>
-
 		</div>
 
 		<div class="darkblock separated">
 			<div class="row-fluid section2">
 				<div class="span6 offset3 copy">
-					<p>A site where knowledge about code is shared easily can have a significant impact on the quality of software developers and what they produce. I’m building Noted Code as that place, and will work hard to nurture its growth as people contribute to it.</p>
-					<p>It’s got a long way to go, but in the spirit of “release early, release often”, you can try Noted Code now to see what I’m building. Browse and explore millions of code repositories from GitHub and Bitbucket, see how other developers have improved them with their notes, then use it to add your own.</p>
+					<p>I've got many ideas for how to improve Noted Code, but in the spirit of “release early, release often”, you can try it now to see what I’m building. Browse and explore millions of code repositories from GitHub and Bitbucket, see how other developers have improved them with their notes, then use it to add your own.</p>
 					<p>Maybe we’ll both learn something.</p>
 					<p class="right">&mdash;Paul</p>
 				</div>
@@ -475,5 +527,16 @@
 			</div>
 
 		</div>
+		<script type="text/javascript">
+  			var _gaq = _gaq || [];
+  			_gaq.push(['_setAccount', 'UA-582156-9']);
+  			_gaq.push(['_trackPageview']);
+
+  			(function() {
+    			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  			})();
+		</script>
 	</body>
 </html>
